syntax = "proto3";

option go_package = "/;gotocloud";

package gotocloud;

service Agent {
  rpc GitClone (CloneRequest) returns (CloneResponse) {}
  rpc Run (RunRequest) returns (RunResponse) {}
}

message CloneRequest {
  string address = 1;
  string branch = 2;
  string encodedToken = 3;
}

// The response message containing the greetings
message CloneResponse {
  string workdir = 1;
}

message RunCommandRequest {
  string command = 1;
  repeated string args = 2;
  RunCommandRequest next = 3;
}

message RunRequest {
  string workdir = 1;
  RunCommandRequest command = 2;
}

// The response message containing the greetings
message RunResponse {
  string ret = 1;
}
